<resources>
    <string name="app_name">TellStory</string>
    <string name="empty_email">Email Cannot Empty</string>
    <string name="empty_password">Password Cannot Empty</string>
    <string name="empty_desc">please Fill The Description</string>
    <string name="take_your_picture">Please Take Your Image</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="user_name">User Name</string>
    <string name="register">register</string>
    <string name="user_profile">User Profile</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="invalid_pasword">password invalid</string>
    <string name="enter_your_pass">Enter Your Password</string>
    <string name="email_invalid">invalid email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="Signup">Signup!</string>
    <string name="name_cannot_empty">name cannot empty</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="enter_your_name">enter your name</string>
    <string name="hello_user">TellStory User</string>
    <string name="hello_name">Setting</string>
    <string name="language">Language</string>
    <string name="change">change</string>
    <string name="signup">Signup</string>
    <string name="email_is_used">email is already Used</string>
    <string name="retry">retry</string>
    <string name="view_location_detail">view location detail</string>
    <string name="pick_your_location">pick your location</string>
    <string name="clik_icon_to_pick_your_location">Pick Your Location</string>
    <string name="logout">logout</string>
    <string name="exit">exit</string>
    <string name="create_at">Uploaded at %1$s</string>

</resources>