<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.UserProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_main"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/bright_orange"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/hello_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/card_view_main"
        app:layout_constraintStart_toStartOf="@+id/card_view_main"
        app:layout_constraintTop_toBottomOf="@+id/card_view_main" />

    <TextView
        android:id="@+id/tv_setting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/hello_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <View
        android:id="@+id/view2"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintStart_toStartOf="@+id/tv_setting_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_name" />

    <TextView
        android:id="@+id/tv_languange_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/language"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_setting"
        app:layout_constraintStart_toEndOf="@id/iv_setting"
        app:layout_constraintTop_toTopOf="@+id/iv_setting" />

    <TextView
        android:id="@+id/tv_change_languange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/change"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_setting"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@id/tv_languange_name"
        app:layout_constraintTop_toTopOf="@+id/iv_setting" />

    <ImageView
        android:id="@+id/iv_setting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        app:layout_constraintStart_toStartOf="@+id/tv_setting_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_setting" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_setting2"
        app:layout_constraintStart_toEndOf="@id/iv_setting2"
        app:layout_constraintTop_toTopOf="@+id/iv_setting2" />

    <TextView
        android:id="@+id/tv_logout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/logout"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_setting2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@id/tv_exit"
        app:layout_constraintTop_toTopOf="@+id/iv_setting2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_app_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_app_name"
        app:layout_constraintStart_toStartOf="@+id/tv_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>